--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -3,6 +3,7 @@
     .md-default-theme .md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-default-theme .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator {background: {{primary_hue_normal.value}}!important;}
     .md-default-theme .md-datepicker-open .md-datepicker-calendar-icon, .md-datepicker-open .md-datepicker-calendar-icon {color: {{primary_hue_normal.value}}!important;}
     .md-default-theme .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator {border: 1px solid {{primary_hue_normal.value}};}
+    md-select.md-default-theme:not([disabled]):focus .md-select-value, md-select:not([disabled]):focus .md-select-value {border-bottom-color: rgba(0,0,0,.12)!important;}
 </style>
 <div class="secondary-dialog-curtain taskrunner" ng-show="task_runner_task_add_visible == true" ng-controller="lightweightController">
     <md-card class="suite-dialog md-card-base card inputs">
@@ -41,15 +42,17 @@
                                             </div>
                                         </md-input-container>
                                     </md-list-item>
-                                    <md-input-container class="md-block lightweight-md-input" flex>
-                                        <label>Task Body</label>
-                                        <textarea name="body" md-detect-hidden="true" ng-model="task.body" rows="3" minlength="10" md-maxlength="250" required></textarea>
-                                        <div ng-messages="addTask.body.$error" ng-show="addTask.body.$dirty">
-                                            <div ng-message="required">Task Body required!</div>
-                                            <div ng-message="minlength">Task Body too short!</div>
-                                            <div ng-message="md-maxlength">Task Body too long!</div>
-                                        </div>
-                                    </md-input-container>
+                                    <md-list-item>
+                                        <md-input-container class="md-block lightweight-md-input" flex>
+                                            <label>Task Body</label>
+                                            <textarea name="body" md-detect-hidden="true" ng-model="task.body" rows="3" minlength="10" md-maxlength="250" required></textarea>
+                                            <div ng-messages="addTask.body.$error" ng-show="addTask.body.$dirty">
+                                                <div ng-message="required">Task Body required!</div>
+                                                <div ng-message="minlength">Task Body too short!</div>
+                                                <div ng-message="md-maxlength">Task Body too long!</div>
+                                            </div>
+                                        </md-input-container>
+                                    </md-list-item>
                                     <md-list-item>
                                         <md-input-container class="md-block lightweight-md-input" flex>
                                             <label>Task Link</label>
@@ -61,10 +64,10 @@
                                         </md-input-container>
                                     </md-list-item>
                                     <md-list-item>
-                                        <md-checkbox aria-label="Is this task user generated checkbox" ng-model="task.isGeneratedByUser" ng-init="false">
+                                        <label>User Generated</label>
+                                        <md-checkbox class="md-secondary" aria-label="Is this task user generated checkbox" ng-model="task.isGeneratedByUser" ng-init="false">
                                            User Generated
                                         </md-checkbox>
-                                        <label class="md-secondary">User Generated</label>
                                     </md-list-item>
                                     <md-list-item ng-show="!task.isGeneratedByUser">
                                         <md-input-container class="md-block lightweight-md-input" flex>
