--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -67,7 +67,7 @@
                                             </md-input-container>
                                         </md-list-item>
                                         <md-list-item>
-                                            <label>User Generated</label>
+                                            <label style="color: rgba(0,0,0,0.38);">Is This Task User Generated</label>
                                             <md-checkbox class="md-secondary" aria-label="Is this task user generated checkbox" ng-model="task.isGeneratedByUser" ng-init="false">
                                             </md-checkbox>
                                         </md-list-item>
